--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "btoa": "^1.2.1",
     "camelcase-keys": "^6.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
